# cos-700

./: .gitignore  README.md  References.bib  Report.tex  build_uml.sh  localSettings.yaml
.devcontainer/: Dockerfile  devcontainer.json
Code/.devcontainer/: Dockerfile  devcontainer.json
Code/Rust/: Cargo.toml
Code/Rust/Metaprogramming/: Cargo.toml
Code/Rust/abstract-factory/: Cargo.toml
Code/Rust/attribute-macro/: Cargo.toml
Code/Rust/composition/: Cargo.toml
Code/Rust/derive-macro/: Cargo.toml
Code/Rust/enum-result/: Cargo.toml
Code/Rust/enums/: Cargo.toml
Code/Rust/macro-client/: Cargo.toml
Code/Rust/macro-client/src/: abstract_factory.highlighted.rs  abstract_factory.rs  abstract_factory_hand.rs  abstract_factory_r.rs  abstract_factory_r_hand.rs  abstract_factory_trait.rs  abstract_factory_trait_hand.rs  main.rs  visitor.rs  visitor_hand.highlighted.rs  visitor_hand.rs  visitor_r.rs  visitor_r_hand.rs
Code/Rust/macro-client/src/gui/: brand_elements.rs  elements.rs  kde.rs  mod.rs
Code/Rust/macro-lib/: Cargo.toml
Code/Rust/macro-lib/src/: annotated_type.rs  attribute_item.rs  key_value.rs  lib.rs  options_attribute.highlighted.rs  options_attribute.rs  rich_type.rs  simple_type.highlighted.rs  simple_type.rs  token_list.rs  token_stream_utils.rs  trait_specifier.highlighted.rs  trait_specifier.rs
Code/Rust/macro-patterns/: Cargo.toml
Code/Rust/macro-patterns/src/: abstract_factory.highlighted.rs  abstract_factory.rs  lib.highlighted.rs  lib.rs  visitor.highlighted.rs  visitor.rs
Sections/: Appendix.tex  Conclusion.tex  DesignPatterns.tex  Introduction.tex  Metaprogramming.tex  Report.tex  Rust.tex
UML/: AbstractFactory.mp  AbstractVisitor.mp  BlackboxProgramming.mp  BlueFactory.mp  FactoryMethod.mp  GlossyFactory.mp  Layout.mp  VisitorAccept.mp
(+79 files in other folders)
