[package]
name = "macro-lib"
version = "0.1.0"
authors = ["Pieter <github@chesedo.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.31", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
